kyverno/policies/always-pull-image-from-remote-registry.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: always-pull-image-from-remote-registry
  annotations:
    policies.kyverno.io/title: Always pull image from remote registry
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy validates the imagePullPolicy is set to `Always`.
      With `Always`, image is pulled from remote registry if local registry does not contain image with matching digest.
      Pulling from remote registry is prefered from security standpoint, local registry can be easier compromised in most cases.
spec:
  validationFailureAction: enforce
  background: true
  rules:
  - name: always-pull-image-from-remote-registry-rule
    match:
      any:
      - resources:
          kinds:
          - Pod
          namespaces:
          - <<namespace>>
    validate:
      message: >-
                The imagePullPolicy must be set to `Always`
      foreach:
      - list: "request.object.spec.containers"
        pattern:
          imagePullPolicy: "Always"
