kyverno/policies/read-only-filesystem-policy.yml
# Kyverno policy validating if all containers in pod has read only root filesystem.
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-ro-rootfs
  annotations:
    policies.kyverno.io/title: Require Read-Only Root Filesystem
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      A read-only root file system helps to enforce an immutable infrastructure strategy;
      the container only needs to write on the mounted volume that persists the state.
      An immutable root filesystem can also prevent malicious binaries from writing to the
      host system. This policy validates that containers define a securityContext
      with `readOnlyRootFilesystem: true`.
spec:
  # Specifies action done when validation fails
  # Allowed values: 'Audit' (report but allow) | 'Enforce' (don't allow to create invalid resource)
  validationFailureAction: Enforce
  # Specifies if policy applies also on already existing resources
  # If set to true, then violations are reported (but existing resources are not blocked - 'audit' semantics)
  background: true
  rules:
    - name: validate-readOnlyRootFilesystem
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: "Root filesystem must be read-only."
        pattern:
          spec:
            containers:
              - securityContext:
                  readOnlyRootFilesystem: true
