kyverno/policies/uid-under-10000-is-forbidden.yml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: uid-under-10000-is-forbidden
  annotations:
    policies.kyverno.io/title: UID under 10000 is forbidden
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy validates that all containers have set memory and CPU requests and limits.
      If runAsUser is set to too low UID, container user can clash with user on host machine, and reference priviledged user.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: uid-under-10000-is-forbidden-rule
      match:
        resources:
          kinds:
            - Pod
          namespaces:
          - <<namespace>>
      validate:
        message: "UID in runAsUser must be at least 10000."
        pattern:
          spec:
            containers:
              - securityContext:
                  runAsUser: ">=10000"
